src/objects/BMCServiceDesk__Projected_Service_Outage__c.object
<CustomObject>
    <description>This object allows you to store data for defining blackouts or outages</description>
    <fields>
        <fullName>BMCServiceDesk__Affected_Service__c</fullName>
        <description>This field stores the affected service for the outage being defined</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the services that are affected by the service outage.</inlineHelpText>
        <label>Affected Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Blackout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the changes are allowed to be scheduled</description>
        <inlineHelpText>Select this field if you want to prevent change requests from being created or modified during the service outage.</inlineHelpText>
        <label>Blackout period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <description>This field stores the info regarding the outage</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_in_Self_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the service outage in Self Service.</description>
        <inlineHelpText>Select to show the service outage in Self Service.</inlineHelpText>
        <label>Display in Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__End_Date__c</fullName>
        <description>This field stores the date and time when the outage ends</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked service</description>
        <label>Configuration Item</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Outages</relationshipLabel>
        <relationshipName>Outages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the outage is active or inactive</description>
        <inlineHelpText>Select this field if the Service Outage record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Outage_Duration__c</fullName>
        <description>Displays/stores the duration in minutes for which the service was not available.</description>
        <formula>IF(
AND(NOT(AND(ISBLANK(BMCServiceDesk__Start_Date__c),ISBLANK(BMCServiceDesk__End_Date__c))),
BMCServiceDesk__End_Date__c &gt; BMCServiceDesk__Start_Date__c),
((BMCServiceDesk__End_Date__c - BMCServiceDesk__Start_Date__c) * 1440),
IF(AND(ISBLANK(BMCServiceDesk__End_Date__c), NOT(ISBLANK(BMCServiceDesk__Start_Date__c)), NOW() &gt; BMCServiceDesk__Start_Date__c),
((NOW() - BMCServiceDesk__Start_Date__c) * 1440),
null
))</formula>
        <inlineHelpText>Displays the duration in minutes for which the service was not available.</inlineHelpText>
        <label>Outage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Root_Cause__c</fullName>
        <description>Stores information about the root cause of the Service Outage.</description>
        <inlineHelpText>Specify the root cause of the service outage.</inlineHelpText>
        <label>Root Cause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Status__c</fullName>
        <description>Stores the status of a service outage, such as Maintenance, Degraded, or Disrupted.</description>
        <inlineHelpText>Select the status of the service outage.</inlineHelpText>
        <label>Outage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Degraded</fullName>
                </value>
                <value>
                    <fullName>Disrupted</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Start_Date__c</fullName>
        <description>This field stores the date and time when the outage starts</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Service Outage</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Outage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__OutageStatusReqdWhenServSelButNoBlackout</fullName>
        <active>true</active>
        <description>Outage Status is a mandatory field when Affected Service is selected and Blackout period is not. Selecting Blackout period will make Outage Status optional.</description>
        <errorConditionFormula>AND(
BMCServiceDesk__Affected_Service__c  &lt;&gt; null,
BMCServiceDesk__Affected_Service__c &lt;&gt; &apos;&apos;,
BMCServiceDesk__Blackout__c = false,
ISPICKVAL(BMCServiceDesk__Service_Status__c,&apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Outage Status is a mandatory field when Affected Service is selected and Blackout period is not.</errorMessage>
    </validationRules>
</CustomObject>